--- a/personal_web/index.html
+++ b/personal_web/index.html
@@ -4,9 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/thinhnguyen.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>
-            Thinh Nguyen — BS Computer Science Student at Georgia Tech
-        </title>
+        <title>Thinh Nguyen — BSCS Student at Georgia Tech</title>
     </head>
     <body>
         <div id="root"></div>
